# arm_simulation

./: README.md
.cache/clangd/index/: alternative_path_costs.cpp.7E0A7AF111F9FB95.idx  attr.h.8119293D378CA18A.idx  buffer_info.h.0CDE09E5A0ED35A5.idx  cartesian.cpp.4ED23EE25915AC69.idx  cartesian_path.cpp.C2F5C4BA341F1064.idx  cartesian_path.h.6E9DCB6012261103.idx  cartesian_path.h.E0B40E21043E5353.idx  cast.h.799C8025F2E24F1B.idx  class.h.9F0A974F8623AE01.idx  color_detect.cpp.F09539EA126F827E.idx  color_detect.hpp.6D131BB8778F4E59.idx  color_detect_main.cpp.C43B59C57D3BB5FF.idx  common.h.8403399FDDBBF479.idx  compute_ik.cpp.85E0601B5F6099A4.idx  compute_ik.h.BCD2FB88D52D5DB0.idx  compute_ik.h.FF8E164E425E5ACC.idx  connect.cpp.745CB20E3701DA7B.idx  connect.h.44268E29D254072E.idx  connect.h.C0D8C6990441649A.idx  container.cpp.39B20716B75D6E54.idx  container.h.3FA07BEA7C523919.idx  container.h.CFC3B5F59902513A.idx  container_p.h.CC041BCA358312B3.idx  core.cpp.B9047136B0E3F61E.idx  core.h.42A002A41BB2F76E.idx  cost_queue.h.8A9BF54AB720BC34.idx  cost_queue.h.D244880722EA1D97.idx  cost_terms.cpp.1A2AE45BDFCAA9EA.idx  cost_terms.h.9E043F66266A7CC7.idx  cost_terms.h.E7A95C0810A09090.idx  current_state.cpp.D6FBB27B01644A73.idx  current_state.h.B3B7065B0E183DDE.idx  current_state.h.F0D99E974D73365A.idx  descr.h.F8349B2FEA0DE9C3.idx  display_solution.cpp.604BA404DC58D3AF.idx  display_solution.h.4723D37C0AB58382.idx  dynamic_raw_ptr_cast_if_possible.h.9BFAABF63AABF3AC.idx  execute_task_solution.hpp.42C040804D55F8F0.idx  execute_task_solution__builder.hpp.03ED042F92C5A98A.idx  execute_task_solution__struct.hpp.5CDE185FD128F9CD.idx  (+237 more)
arm5dof_description/: CMakeLists.txt
arm5dof_description/launch/: arm5dof.launch.py
arm5dof_description/meshes/: base_link.STL  camera.STL  goods.STL  left_gripper_link.STL  right_rubber_pad_link.STL  ws_board.STL
arm5dof_description/plugin/: gazebo_depth_camera.xacro
arm5dof_description/rviz/: default_launch.rviz
arm5dof_description/urdf/: arm5dof.dae  arm5dof.urdf  arm5dof.urdf.xacro  ikfast-arm5dof  ikfastarm5dof.cpp
arm5dof_movegroup/: CMakeLists.txt  package.xml
arm5dof_movegroup/include/arm5dof_movegroup/: color_detect.hpp  move_group.hpp
arm5dof_movegroup/launch/: detect_move.launch.py
arm5dof_movegroup/rviz/: movegroup.rviz
arm5dof_movegroup/src/: color_detect.cpp  color_detect_main.cpp  move_group.cpp  move_group_main.cpp
arm5dof_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
arm5dof_moveit_config/config/: arm5dof.ros2_control.xacro  arm5dof.srdf  arm5dof.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
arm5dof_moveit_config/launch/: demo.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
arm5dof_moveit_ikfast_plugins/: CMakeLists.txt  arm5dof_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
arm5dof_moveit_ikfast_plugins/src/: arm5dof_arm_ikfast_moveit_plugin.cpp  arm5dof_arm_ikfast_solver.cpp
arm5dof_mtc/: CMakeLists.txt  package.xml
arm5dof_mtc/include/arm5dof_mtc/: mtc.hpp
arm5dof_mtc/launch/: controllers.launch.py  move_group.launch.py  mtc.launch.py  mtc.rviz  mtc0.launch.py  mtc1.launch.py  mtc2.launch.py  mtc3.launch.py  mtc4.launch.py  mtc5.launch.py
arm5dof_mtc/rviz/: mtc.rviz  mtc0.rviz
arm5dof_mtc/src/: main.cpp  mtc.cpp  mtc0.cpp  mtc1.cpp
arm5dof_target_detect/: CMakeLists.txt
arm5dof_target_detect/msg/: TargetDetect.msg
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arm5dof_description/share/arm5dof_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/arm5dof_description/share/arm5dof_description/cmake/: arm5dof_descriptionConfig.cmake
install/arm5dof_description/share/arm5dof_description/launch/: arm5dof_gazebo.launch.py  display_arm_urdf.launch.py
install/arm5dof_description/share/arm5dof_description/meshes/: bucket.STL  cube.STL  left_rubber_pad_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  right_gripper_link.STL
install/arm5dof_description/share/arm5dof_description/rviz/: arm5dof.rviz
install/arm5dof_description/share/arm5dof_description/urdf/: arm5dof.xacro
install/arm5dof_movegroup/lib/arm5dof_movegroup/: move_group
install/arm5dof_movegroup/share/arm5dof_movegroup/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/arm5dof_moveit_config/share/arm5dof_moveit_config/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/arm5dof_moveit_config/share/arm5dof_moveit_config/config/: arm5dof.srdf  moveit_controllers.yaml  ros2_controllers.yaml
install/arm5dof_mtc/lib/arm5dof_mtc/: arm5dof_mtc
install/arm5dof_mtc/share/arm5dof_mtc/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/arm5dof_target_detect/share/arm5dof_target_detect/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/moveit_task_constructor_capabilities/share/moveit_task_constructor_capabilities/: package.sh
install/moveit_task_constructor_core/share/moveit_task_constructor_core/: local_setup.sh  package.sh
install/moveit_task_constructor_demo/lib/moveit_task_constructor_demo/: alternative_path_costs  cartesian  fallbacks_move_to  ik_clearance_cost  modular  pick_place_demo
install/moveit_task_constructor_demo/share/moveit_task_constructor_demo/: local_setup.sh  package.sh
install/moveit_task_constructor_msgs/share/moveit_task_constructor_msgs/: local_setup.sh  package.sh
install/moveit_task_constructor_visualization/lib/: libmotion_planning_tasks_rviz_plugin.so.0.1.3  libmoveit_task_visualization_tools.so.0.1.3
install/moveit_task_constructor_visualization/share/moveit_task_constructor_visualization/: package.sh
install/rviz_marker_tools/share/rviz_marker_tools/: package.sh
log/: latest_build
(+36 files in other folders)
