<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm5dof_movegroup</name>
  <version>0.0.0</version>
  <description>Custom MoveIt group with color detection messages</description>
  <maintainer email="2188755469@qq.com">zc</maintainer>
  <license>Apache-2.0</license>

  <!-- 仅 ament_cmake 属于 buildtool_depend -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 其余都属于 build_depend -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>OpenCV</build_depend>
  <depend>arm5dof_target_detect</depend>
  <build_depend>geometry_msgs</build_depend>

  

  <!-- 运行时依赖 -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>OpenCV</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
<!-- <?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>block</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2188755469@qq.com">zc</maintainer>
  <license>Apache-2.0</Apache-2></license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>rclcpp</depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>OpenCV</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> -->
